Stop room from overflowing

--- a/client/components/Room/Room.css
+++ b/client/components/Room/Room.css
@@ -88,7 +88,8 @@
   border:none;
   outline:none;
   background: transparent;
-  height: 10%;
+  height: 20%;
+  overflow: auto;
   position: absolute;
   bottom:0;
   right:0;
